<resources>
    <string name="app_name">RC Car</string>
    <string name="BT_Activity_name">RC Car - find BLE device</string>
    <string name="bt_menu_icon">Nastavení BT</string>

    <string name="forward">dopredu</string>
    <string name="back">dozadu</string>
    <string name="right">vpravo</string>
    <string name="left">vlevo</string>

    <string name="speed">rychlost</string>

    <string name="not_LE">Není Bluetooth device!</string>
    <string name="not_BLE">Není BLE device!</string>
    <string name="BT_already_ON">Bluetooth je již zapnut</string>
    <string name="BT_ON">Bluetooth zapnut</string>
    <string name="BT_OFF">Bluetooth vypnut</string>

    <string name="scan_start">Scan zahájen</string>
    <string name="scan_stop">Scan ukončen</string>

    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="disconnected">Disconected</string>

    <string name="not_connected">Not Connected!</string>

    <string name="btn_LeftLED">Vlevo</string>
    <string name="btn_LeftRIGHT">Vpravo</string>
    <string name="btn_Lights">Světla</string>

</resources>
